// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter snapshot renders 1`] = `
<div
  data-testid="table"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "marginBottom": 10,
          "marginTop": 10,
          "width": "90%",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#5cb85c",
            "width": "1%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Health rend 1`] = `
<div
  data-testid="table"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "marginBottom": 10,
          "marginTop": 10,
          "width": "90%",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#f0ad4e",
            "width": "70%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Health render Health Progress 1`] = `
<div
  data-testid="table"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "marginBottom": 10,
          "marginTop": 10,
          "width": "90%",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#f0ad4e",
            "width": "70%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Health render Health Progress 2`] = `
<div
  data-testid="table"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
      }
    }
  >
    <div
      className="progress"
      style={
        Object {
          "marginBottom": 10,
          "marginTop": 10,
          "width": "90%",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#f0ad4e",
            "width": "70%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Health render Machines list Progress 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      height="272"
      src="https://i.imgur.com/jcvsFKh.png"
      width="800"
    />
  </header>
  <nav
    className="App-nav"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      href="/machines"
      onClick={[Function]}
    >
      Machines
    </a>
  </nav>
</div>
`;
